# imsidplayer

./: .dockerignore  .gitignore  .gitmodules  12345.sid  CHANGELOG_v0.0.23.md  CHANGELOG_v0.0.23_SYNTHESE.md  CMakeLists.txt  Dockerfile.windows  README.DOCKER.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_v0.0.23.md  build.sh  docker-build-windows.sh  docker-push-ghcr.sh  docker-run-windows.sh  docker-setup.sh  docker-test-windows.sh  imSid.code-workspace  imgui.ini  migrate_ratings.py  remove_ratings_from_history.py
.cache/clangd/index/: Application.cpp.A465315441CDB01E.idx  Application.h.4602EAC98370F697.idx  Attributes.h.A3DCA69DBF68C43D.idx  Backend.h.1ABAB93C8EAE3A2A.idx  BackendManager.h.A1565181FAB366D9.idx  BackendOptions.h.B574D31A4F777C5A.idx  BackendUtilities.h.990DDD4728133CC9.idx  BackendWorker.h.BE388038C287DCF9.idx  BackendWorkerLock.h.037000C1016216CE.idx  BackgroundManager.cpp.1D28C65E989D45FA.idx  BackgroundManager.h.C88E0A9F1C9EC401.idx  BacktraceStorage.h.B34582AE9E915681.idx  BoundedSPSCQueue.h.F73BE1371A5C959C.idx  ChronoTimeUtils.h.C3067AF0565CDE02.idx  Codec.h.B98937C45329BA9C.idx  Common.h.E583DCD6C07A7192.idx  Config.cpp.D5F806FA8DDFF872.idx  Config.h.48D29C0BB5A60AE2.idx  ConsoleSink.h.C48706A0314FDAD1.idx  DatabaseManager.cpp.2555CB70780D34A1.idx  DatabaseManager.h.10D2E690199E7781.idx  DynamicFormatArgStore.h.C54647BF6EA53182.idx  FileBrowser.cpp.E5BD0E7096A8B71F.idx  FileBrowser.h.469FE7B8CA92BBA5.idx  FileSink.h.801766CE40C90697.idx  Filesystem.h.29B225CF38494406.idx  Filter.h.BAF8EE71E6591828.idx  FilterWidget.cpp.F54CB100039BF205.idx  FilterWidget.h.9B5B2A5D50A8DA44.idx  Frontend.h.FB17D86FDF82A3A9.idx  FrontendOptions.h.F6790838E69CBBBA.idx  HistoryManager.cpp.6E8E725137A2CBC2.idx  HistoryManager.h.AE2F27D71D4250C9.idx  IconsFontAwesome6.h.F7E712ECAD1D6AE8.idx  InlinedVector.h.E7FD8CBDCC99887D.idx  LogLevel.h.13557C396630FEEE.idx  LogMacros.h.0AF8F0E95486DCA5.idx  Logger.cpp.F95F1037146CB0C8.idx  Logger.h.98E5DF2C6D194E1A.idx  Logger.h.BCC68F67D99F90D7.idx  (+175 more)
.github/workflows/: cmake-multi-platform.yml
build-win/: install_manifest.txt
build-win/bundle/: imgui.ini
build-win/include/: Version.h
certs/: google_trust_services_bundle.pem
docker/: Dockerfile.windows  README.md  docker-build-windows.sh  docker-push-ghcr.sh  docker-run-windows.sh  docker-setup.sh  docker-test-windows.sh
docs/: .obsidian-styles.css  COMPUTER_SCIENCE_BEST_PRACTICES.md  FILTRAGE_ARBRE_ANALYSE.md  FUZZY_SEARCH.md  FUZZY_SEARCH_EN.md  IMGUI_CLIPPER_FILTRAGE_DYNAMIQUE.md  IMGUI_CLIPPER_UPDATE.md  IMGUI_CLIPPING_EXPLANATION.md  IMGUI_TREE_RENDERING_CHAIN.md  IMGUI_TREE_RENDERING_DIAGRAM.md  INDEX_BASED_FILTERING_EVALUATION.md  LOGS_ADDITIONNELS.md  MULTITHREADING.md  MULTITHREADING_EN.md  PERFORMANCE_APRES_OPTIMISATION.md  PERFORMANCE_EXPAND_ALL.md  PERFORMANCE_REFERENCE.md  PERFORMANCE_REFERENCE_COMPLETE.md  PERFORMANCE_REFERENCE_FINAL.md  PERFORMANCE_VIRTUAL_SCROLLING.md  README.md  TREE_NODES_RENDERING.md  VIRTUAL_SCROLLING_OPTIMIZATION.md
docs/.obsidian/: appearance.json  workspace.json
docs/.obsidian/snippets/: .obsidian-styles.css
docs/snippets/: wide-content.css
include/: Application.h  BackgroundManager.h  CloudSyncManager.h  Config.h  DatabaseManager.h  FileBrowser.h  FilterWidget.h  HTTPClient.h  HistoryManager.h  Logger.h  MD5.h  PlaylistManager.h  RatingManager.h  SidMetadata.h  SidPlayer.h  SongLengthDB.h  UIManager.h  UpdateChecker.h  UpdateInstaller.h  Utils.h  Version.h.in
src/: Application.cpp  Application_update.cpp  BackgroundManager.cpp  CloudSyncManager.cpp  Config.cpp  DatabaseManager.cpp  FileBrowser.cpp  FilterWidget.cpp  HTTPClient.cpp  HistoryManager.cpp  Logger.cpp  MD5.cpp  PlaylistManager.cpp  RatingManager.cpp  SidMetadata.cpp  SidPlayer.cpp  SongLengthDB.cpp  UIManager.cpp  Untitled  UpdateChecker.cpp  UpdateInstaller.cpp  Utils.cpp  main.cpp  main_new.cpp  main_old.cpp
tests/: http_test.cpp  md5_test.cpp
